Added profile readings and testings: 1. Profile channel one and two. 2. Monthly profile reading. 3. Unit and integration testing.